--- a/_site.yml
+++ b/_site.yml
@@ -13,10 +13,11 @@ google_analytics:
 theme: assets/theme.css 
 description: |
   Yuri Souza
+favicon: images/favicon.ico
 output_dir: "docs"
 navbar:
   logo:
-  #  image: YuriSSouza.jpg
+    image: images/android-chrome.png
   right:
     - icon: fab fa-researchgate fa-2x
       href: https://www.researchgate.net/profile/Yuri-Souza-6
