--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "yuri_souza"
-title: "Yuri Souza, Ph.D. student"
+title: "Yuri Souza, Data Scientist"
 #favicon: icons/favicon.ico
 base_url: https://souzayuri.github.io/
 repository_url: https://github.com/souzayuri/souzayuri.github.io 
